# jezyki-programowania

lab1-ffi-ada-c-rust/zad1/: .gitignore  CMakeLists.txt
lab1-ffi-ada-c-rust/zad1-c/: main.c
lab1-ffi-ada-c-rust/zad1-c/lib/: iter.c
lab1-ffi-ada-c-rust/zad1-c/utils/: hidden.h  optional.h
lab1-ffi-ada-c-rust/zad1/lib/: rec.h
lab1-ffi-ada-c-rust/zad2-ada/: .gitignore  Zad2.gpr
lab1-ffi-ada-c-rust/zad2-ada/src/: main.adb
lab1-ffi-ada-c-rust/zad3-rust/: Cargo.toml
lab1-ffi-ada-c-rust/zad3-rust/src/: main.rs
lab1-ffi-ada-c-rust/zad4/: Zad4.gpr
lab1-ffi-ada-c-rust/zad4/src/: main.c  wrapper.h
lab1-ffi-ada-c-rust/zad5-ada-to-c/: Makefile  main.adb  wrapper.ads
lab1-ffi-ada-c-rust/zad5/utils/: common.ads  optional.ads
lab1-ffi-ada-c-rust/zad6/: build.rs
lab1-ffi-ada-c-rust/zad6-rust-to-c/: Cargo.toml
lab1-ffi-ada-c-rust/zad6/src/: main.rs
lab1-ffi-ada-c-rust/zad7/: Cargo.toml  Makefile
lab2-algebra-templates/zad1-cpp/: CMakeLists.txt  GaloisField.hpp  NumberTools.cpp  NumberTools.hpp  main.cpp
lab2-algebra-templates/zad2-java/: pom.xml
lab3-cryptography/zad1/: User.hpp
lab3-cryptography/zad1-cpp/: .gitignore  CMakeLists.txt  DHSetup.hpp  main.cpp
lab3-cryptography/zad1-cpp/gf/: gf.hpp  tools.hpp
lab3-cryptography/zad2/: pom.xml
lab3-cryptography/zad3-rust/: Cargo.toml
lab4-concurrency/: README.md
lab4-concurrency/ada-impl/: dining_philosophers.adb  dining_philosophers.gpr
lab4-concurrency/go-impl/: go.mod  main.go
lab4-concurrency/rust-impl/: .gitignore  Cargo.toml
lab5-functional/: 1.hs  1.lisp  1.sml  2.pl
(+60 files in other folders)
